--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   .subsec{margin-left:0}
   .legend{display:flex;align-items:center;gap:8px;font-size:12px;color:#333;margin-top:6px}
   .sw{width:14px;height:10px;border-radius:3px;border:1px solid #999}
-  .row2{display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap}
-  .subtle{color:#666;font-size:12px;flex:1 1 320px;min-width:260px;max-width:100%;white-space:normal;overflow-wrap:anywhere;text-align:right}
+  .row2{display:grid;grid-template-columns:auto 1fr;column-gap:12px;align-items:baseline} 
+  .subtle{color:#666;font-size:12px;justify-self:end;text-align:right;white-space:normal;overflow-wrap:anywhere;word-break:break-word;hyphens:auto;max-width:100%} 
   .testbar{margin-top:10px;display:flex;gap:8px;align-items:center}
   pre#testsOut{background:#fafafa;border:1px solid #eee;border-radius:8px;padding:10px;max-height:260px;overflow:auto;font-size:12px}
   .rangeRow{display:grid;grid-template-columns:minmax(0,1fr) 80px;gap:8px;align-items:center;width:100%;}
@@ -142,7 +142,7 @@
 
       <div class="row2">
         <div><strong>Solved overlay:</strong> BEFORE (blue) + AFTER (red) in r–z</div>
-        <div class="subtle" id="status">Ready • Strain range: — • Defl scale: <span id="defScaleLbl">1×</span></div>
+        <div class="subtle" id="status" style="max-width:100%">Ready • Strain range: — • Defl scale: <span id="defScaleLbl">1×</span></div>
       </div>
       <div class="canvasWrap">
         <div id="solveBadge" class="solveBadge" aria-live="polite">Ready</div>
@@ -664,6 +664,7 @@
 </script>
 </body>
 </html>
+
 
 
 
